// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render empty tooltips 1`] = `
<div
  id="tooltip"
/>
`;

exports[`should not render empty tooltips 2`] = `
<div
  id="tooltip"
/>
`;

exports[`should render 1`] = `
<Fragment>
  <div
    id="tooltip"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />
</Fragment>
`;

exports[`should render 2`] = `
<Fragment>
  <div
    id="tooltip"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />
  <TooltipPortal>
    <ScreenPositionFixer
      ready={false}
    >
      <Component />
    </ScreenPositionFixer>
  </TooltipPortal>
</Fragment>
`;
